<resources>
    <string name="app_name">Health &amp; Fitness</string>
    <string name="client_id">387613332136-hsucav4akivc6sgvalecn9fej5ee517m.apps.googleusercontent.com</string>
    <string name="basal_netabolic_rate">Basal Metabolic Rate</string>
    <string name="blood_alcohol_content">Blood Alcohol Content</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_suger">Blood Suger</string>
    <string name="blood_volume">Blood Volume</string>
    <string name="body_adiposity_index">Body Adiposity Index</string>
    <string name="body_fat">Body Fat</string>
    <string name="body_frame_size">Body Frame Size</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="body_surface_area">Body Surface Area</string>
    <string name="bruce_trade_mill">Bruce Trade Mill</string>
    <string name="calorie_burn">Calorie Burn</string>
    <string name="childrens_height_predictor">Childrens Height</string>
    <string name="cholestrol_ratio">Cholestrol Ratio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="enter_your_height_ft">Enter Your Height (ft)</string>
    <string name="enter_your_weight_kg">Enter Your Weight (kg)</string>
    <string name="calculate_basal_metabolic_rate">Calculate Basal Metabolic Rate</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bac_calculator">BAC Calculator</string>
    <string name="enter_the_drink_volume_liters">Enter the Drink Volume (liters)</string>
    <string name="time_passed_sence_drinking_hour">Time passed sence drinking (hour)</string>
    <string name="blood_alchool_content_chart">Blood Alchool Content Chart</string>
    <string name="average_individual_appears_normal">Average individual appears normal</string>
    <string name="leval">Leval</string>
    <string name="alcohol_effects">Alcohol Effects</string>
    <string name="_0_01_0_05">0.01 - 0.05</string>
    <string name="_0_03_0_12">0.03 - 0.12</string>
    <string name="mild_euphoria">Mild euphoria,talkativeness, decreased inhibitions, decreased attention, impaired judgment, increased reaction time</string>
    <string name="_0_09_0_25">0.09 - 0.25</string>
    <string name="emotional_instability">Emotional instability, loss of critical judgment, impairment of memory and comprehension, decreased sensory response, mild muscular incoordination</string>
    <string name="_0_18_0_30">0.18 - 0.30</string>
    <string name="confusion">Confusion, dizziness, exaggerated emotions (anger, fear, grief) impaired visual perception, decreased pain sensation, impaired balance, staggering gait, slurred speech, moderate muscular incoordination</string>
    <string name="_0_27_0_40">0.27 - 0.40</string>
    <string name="apathy">Apathy, impaired consciousness, stupor, significantly decreased response to stimulation, severe muscular incoordination, inability to stand or walk, vomiting, incontinence of urine and feces</string>
    <string name="_0_35_0_50">0.35 - 0.50</string>
    <string name="unconsciousness">Unconsciousness, depressed or abolished reflexes, abnormal body temperature, coma; possible death from respiratory paralysis</string>
    <string name="enter_systolic_upper_pressure_mmhg">Enter Systolic(Upper) Pressure (mmHg)</string>
    <string name="blood_pressure_calculator">Blood Pressure Calculator</string>
    <string name="enter_diastolic_lower_pressure_mmhg">Enter Diastolic(Lower) Pressure (mmHg)</string>
    <string name="view_chart">View Chart</string>
    <string name="blood_pressure_chart">Blood Pressure Chart</string>
    <string name="systolic_blood_pressure_upper">Systolic Blood Pressure(Upper)</string>
    <string name="category">Category</string>
    <string name="systolic_mmhg">Systolic mmHg</string>
    <string name="normal">Normal</string>
    <string name="lt_120"><![CDATA[< 120]]></string>
    <string name="prehypertension">Prehypertension</string>
    <string name="hypertension_stage_1">Hypertension Stage 1</string>
    <string name="hypertension_stage_2">Hypertension Stage 2</string>
    <string name="hypertensive_crisis">Hypertensive Crisis</string>
    <string name="_120_139">120 - 139</string>
    <string name="_140_159">140 - 159</string>
    <string name="_160_180">160 - 180</string>
    <string name="gt_180"><![CDATA[> 180]]></string>
    <string name="diastolic_mmhg">Diastolic mmHg</string>
    <string name="diastolic_blood_pressure_lower">Diastolic Blood Pressure(Lower)</string>
    <string name="lt_80"><![CDATA[< 80]]></string>
    <string name="_80_89">80 - 89</string>
    <string name="_90_99">90 - 99</string>
    <string name="_100_110">100 - 110</string>
    <string name="gt_110"><![CDATA[> 110]]></string>
    <string name="blood_suger_conversion">Blood Suger Conversion</string>
    <string name="mg_dl_to_mmol_l">mg/dl to mmol/l</string>
    <string name="mmol_l_to_mg_dl">mmol/l to mg/dl</string>
    <string name="enter_your_blood_suger">Enter Your blood suger</string>
    <string name="calculate_blood_suger">Calculate Blood Suger</string>
    <string name="blood_suger_chart">Blood Suger Chart</string>
    <string name="blood_sugar_level_in_mg_dl">Blood sugar level in mg/dl</string>
    <string name="children">Children</string>
    <string name="adults">Adults</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="_70_100">70 - 100</string>
    <string name="lt_70"><![CDATA[< 70]]></string>
    <string name="gt_140"><![CDATA[> 140]]></string>
    <string name="blood_sugar_level_in_mmol_l">Blood Sugar level in mmol/l</string>
    <string name="_3_9_5_5">3.9 - 5.5</string>
    <string name="lt_3_9"><![CDATA[< 3.9]]></string>
    <string name="gt_7_7"><![CDATA[> 7.7]]></string>
    <string name="_3_9_7_7">3.9 - 7.7</string>
    <string name="gt_10"><![CDATA[> 10]]></string>
    <string name="blood_volume_calculator">Blood Volume Calculator</string>
    <string name="calculate_blood_volume">Calculate Blood Volume</string>
    <string name="enter_your_hip_circumference_cm">Enter Your Hip Circumference (cm)</string>
    <string name="body_adiposity_index_calculator">Body Adiposity Index Calculator</string>
    <string name="calculate_body_adiposity_index">Calculate Body Adiposity Index</string>
    <string name="body_adiposity_index_chart">Body Adiposity Index Chart</string>
    <string name="body_adiposity_index_for_male">Body Adiposity Index for Male</string>
    <string name="age">Age</string>
    <string name="under_weight">Under Weight</string>
    <string name="healthy">Healthy</string>
    <string name="over_weight">Over Weight</string>
    <string name="obese">Obese</string>
    <string name="_20_39">20 - 39</string>
    <string name="_40_59">40 - 59</string>
    <string name="_60_79">60 - 79</string>
    <string name="lt_8"><![CDATA[< 8%]]></string>
    <string name="_8_21">8% - 21%</string>
    <string name="_21_26">21% - 26%</string>
    <string name="gt_26"><![CDATA[> 26%]]></string>
    <string name="lt_11"><![CDATA[< 11%]]></string>
    <string name="_11_23">11% - 23%</string>
    <string name="_23_29">23% - 29%</string>
    <string name="gt_29"><![CDATA[> 29%]]></string>
    <string name="lt_13"><![CDATA[< 13%]]></string>
    <string name="_13_25">13% - 25%</string>
    <string name="_25_31">25% - 31%</string>
    <string name="gt_31"><![CDATA[> 31%]]></string>
    <string name="body_adiposity_index_for_female">Body Adiposity Index for Female</string>
    <string name="lt_21"><![CDATA[< 21%]]></string>
    <string name="_21_33">21% - 33%</string>
    <string name="_33_39">33% - 39%</string>
    <string name="gt_39"><![CDATA[> 39%]]></string>
    <string name="lt_23"><![CDATA[< 23%]]></string>
    <string name="_23_35">23% - 35%</string>
    <string name="_35_41">35% - 41%</string>
    <string name="gt_41"><![CDATA[> 41%]]></string>
    <string name="lt_25"><![CDATA[< 25%]]></string>
    <string name="_25_38">25% - 38%</string>
    <string name="_38_43">38% - 43%</string>
    <string name="gt_43"><![CDATA[> 43%]]></string>
    <string name="body_fat_calculator">Body Fat Calculator</string>
    <string name="calculate_body_fat">Calculate Body Fat</string>
    <string name="blood_fat_chart">Blood Fat Chart</string>
    <string name="body_fat_percentage_comparison_table">Body Fat Percentage Comparison Table</string>
    <string name="fat_level">Fat Level</string>
    <string name="men">Men(%)</string>
    <string name="women">Women(%)</string>
    <string name="very_low">Very Low</string>
    <string name="average">Average</string>
    <string name="very_high">Very High</string>
    <string name="_7_10">7 - 10</string>
    <string name="_14_17">14 - 17</string>
    <string name="_10_13">10 - 13</string>
    <string name="_17_20">17 - 20</string>
    <string name="_13_17">13 - 17</string>
    <string name="_20_27">20 - 27</string>
    <string name="_17_25">17 - 25</string>
    <string name="_27_31">27 - 31</string>
    <string name="gt_25"><![CDATA[> 25]]></string>
    <string name="gt_31_"><![CDATA[> 31]]></string>
    <string name="body_fat_percentage_for_men_and_women">Body Fat Percentage for Men and Women</string>
    <string name="classification">Classification</string>
    <string name="essential_fat">Essential Fat</string>
    <string name="_2_4">2 - 4</string>
    <string name="_10_12">10 - 12</string>
    <string name="athletes">Athletes</string>
    <string name="_6_13">6 - 13</string>
    <string name="_14_20">14 - 20</string>
    <string name="fitness">Fitness</string>
    <string name="aerobic_exercise">Aerobic Exercise</string>
    <string name="burn_calories">Burn Calories</string>
    <string name="exercise">Exercise</string>
    <string name="approximate_calories_burned">Approximate Calories Burned</string>
    <string name="walking">Walking</string>
    <string name="_100_calories_burned_per_mile">100 calories burned per mile</string>
    <string name="jogging">Jogging</string>
    <string name="_120_calories_burned_per_mile">120 calories burned per mile</string>
    <string name="swimming">Swimming</string>
    <string name="_100_calories_burned_in_20_min">100 calories burned in 20 min</string>
    <string name="bicycling">Bicycling</string>
    <string name="gardening">Gardening</string>
    <string name="_100_calories_burned_in_30_min">100 calories burned in 30 min</string>
    <string name="your_body_can_stand_almost_anything">Your body can stand almost anything.</string>
    <string name="it_s_your_mind_that_you_have_to_convince">It’s your mind that you have to convince.</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="oops">OOPS!</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="retry">RETRY</string>
    <string name="allow_activity_recognition">Allow activity recognition</string>
    <string name="this_permission_is_required_to_detect_and_count_the_steps_you_take">This permission is required to detect and count the steps you take.</string>
    <string name="you_can_revoke_this_permission_in_system_settings_but_keep_in_mind_the_app_will_stop_working">You can revoke this permission in system settings, but keep in mind the app will stop working</string>
    <string name="all_your_data_is_stored_locally_on_your_device_and_will_not_be_shared_with_anyone">All your data is stored locally on your device and will not be shared with anyone</string>
    <string name="continue1">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="enter_the_number">Enter the number</string>
</resources>