<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
tools:context=".Step_Counter.Fragments.RecognitionPermission_Frag">

<ImageView
    android:id="@+id/imageview1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="40dp"
    android:src="@drawable/ic_directions_walk" />

<TextView
    android:id="@+id/txt1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imageview1"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:text="@string/allow_activity_recognition"
    android:textColor="@color/white"
    android:textSize="25sp" />

<TextView
    android:id="@+id/txt2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/txt1"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:text="@string/this_permission_is_required_to_detect_and_count_the_steps_you_take"
    android:textColor="@color/white"
    android:textSize="15sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/txt2"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_do_no_disturb" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_revoke_this_permission_in_system_settings_but_keep_in_mind_the_app_will_stop_working"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>

<TextView
    android:id="@+id/txt3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/btn_recognition_permission"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:text="@string/all_your_data_is_stored_locally_on_your_device_and_will_not_be_shared_with_anyone"
    android:textColor="@color/white"
    android:textSize="15sp" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/btn_recognition_permission"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:text="@string/continue1"
    android:textColor="@color/black"
    app:cornerRadius="20dp" />

</RelativeLayout>